--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -1,14 +1,352 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainHomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="HOME" />
+        android:layout_height="match_parent">
+
+        <ScrollView
+            android:id="@+id/scrollView2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraint"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="20dp">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/homeconstraint0"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="@+id/constraint">
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/viewPager2"
+                        android:layout_width="0dp"
+                        android:layout_height="200dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/banner_page_number"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="2dp"
+                        android:text="1"
+                        android:textColor="#fff"
+                        app:layout_constraintBottom_toBottomOf="@+id/banner_pager_number_all"
+                        app:layout_constraintEnd_toStartOf="@+id/banner_pager_number_all"
+                        app:layout_constraintTop_toTopOf="@+id/banner_pager_number_all" />
+
+
+                    <TextView
+                        android:id="@+id/banner_pager_number_all"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:text="/5"
+                        android:textColor="#fff"
+                        app:layout_constraintBottom_toBottomOf="@+id/banner_event_all"
+                        app:layout_constraintEnd_toStartOf="@+id/banner_event_all"
+                        app:layout_constraintTop_toTopOf="@+id/banner_event_all" />
+
+                    <TextView
+                        android:id="@+id/banner_event_all"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:alpha="0.7"
+                        android:background="@drawable/banner_white_rectangle_left_radius"
+                        android:paddingStart="8dp"
+                        android:paddingTop="4dp"
+                        android:paddingEnd="4dp"
+                        android:paddingBottom="4dp"
+                        android:text="모두 보기>"
+                        android:layout_marginRight="5dp"
+                        app:layout_constraintBottom_toBottomOf="@+id/viewPager2"
+                        app:layout_constraintEnd_toEndOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/homeconstraint1"
+                    android:layout_width="match_parent"
+                    android:background="@drawable/makecircle"
+                    android:layout_height="360dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="20dp"
+                    app:layout_constraintTop_toBottomOf="@+id/homeconstraint0"
+                    app:layout_constraintBottom_toTopOf="@+id/homeconstraint2">
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/cameraBtn"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:background="@drawable/makecirclethin"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+                        <ImageButton
+                            android:id="@+id/cameraBtn1"
+                            android:layout_width="110dp"
+                            android:layout_height="110dp"
+                            android:background="@drawable/menucamera"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                    <ImageButton
+                        android:id="@+id/menuBtn1"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        app:layout_constraintCircle="@id/cameraBtn"
+                        app:layout_constraintCircleRadius="130dp"
+                        app:layout_constraintCircleAngle="0"
+                        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
+                        app:layout_constraintTop_toTopOf="@id/cameraBtn"
+                        android:background="@drawable/menu1"/>
+                    <TextView
+                        android:id="@+id/textView1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="알루미늄"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@+id/menuBtn1"
+                        app:layout_constraintEnd_toEndOf="@+id/menuBtn1"
+                        app:layout_constraintStart_toStartOf="@+id/menuBtn1"
+                        android:textColor="@color/black"/>
+
+                    <ImageButton
+                        android:id="@+id/menuBtn2"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        app:layout_constraintCircle="@id/cameraBtn"
+                        app:layout_constraintCircleRadius="130dp"
+                        app:layout_constraintCircleAngle="40"
+                        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
+                        app:layout_constraintTop_toTopOf="@id/cameraBtn"
+                        android:background="@drawable/menu2"/>
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="종이팩"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@+id/menuBtn2"
+                        app:layout_constraintEnd_toEndOf="@+id/menuBtn2"
+                        app:layout_constraintStart_toStartOf="@+id/menuBtn2"
+                        android:textColor="@color/black"/>
+
+                    <ImageButton
+                        android:id="@+id/menuBtn3"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        app:layout_constraintCircle="@id/cameraBtn"
+                        app:layout_constraintCircleRadius="130dp"
+                        app:layout_constraintCircleAngle="80"
+                        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
+                        app:layout_constraintTop_toTopOf="@id/cameraBtn"
+                        android:background="@drawable/menu3"/>
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="유리"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@+id/menuBtn3"
+                        app:layout_constraintEnd_toEndOf="@+id/menuBtn3"
+                        app:layout_constraintStart_toStartOf="@+id/menuBtn3"
+                        android:textColor="@color/black"/>
+
+                    <ImageButton
+                        android:id="@+id/menuBtn4"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        app:layout_constraintCircle="@id/cameraBtn"
+                        app:layout_constraintCircleRadius="130dp"
+                        app:layout_constraintCircleAngle="120"
+                        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
+                        app:layout_constraintTop_toTopOf="@id/cameraBtn"
+                        android:background="@drawable/menu4"/>
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="플라스틱"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@+id/menuBtn4"
+                        app:layout_constraintEnd_toEndOf="@+id/menuBtn4"
+                        app:layout_constraintStart_toStartOf="@+id/menuBtn4"
+                        android:textColor="@color/black"/>
+
+                    <ImageButton
+                        android:id="@+id/menuBtn5"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        app:layout_constraintCircle="@id/cameraBtn"
+                        app:layout_constraintCircleRadius="130dp"
+                        app:layout_constraintCircleAngle="160"
+                        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
+                        app:layout_constraintTop_toTopOf="@id/cameraBtn"
+                        android:background="@drawable/menu5"/>
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="의류"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@+id/menuBtn5"
+                        app:layout_constraintEnd_toEndOf="@+id/menuBtn5"
+                        app:layout_constraintStart_toStartOf="@+id/menuBtn5"
+                        android:textColor="@color/black"/>
+
+
+                    <ImageButton
+                        android:id="@+id/menuBtn6"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@drawable/menu6"
+                        app:layout_constraintCircle="@id/cameraBtn"
+                        app:layout_constraintCircleAngle="200"
+                        app:layout_constraintCircleRadius="130dp"
+                        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
+                        app:layout_constraintTop_toTopOf="@id/cameraBtn" />
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="종이류"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@+id/menuBtn6"
+                        app:layout_constraintEnd_toEndOf="@+id/menuBtn6"
+                        app:layout_constraintStart_toStartOf="@+id/menuBtn6"
+                        android:textColor="@color/black"/>
+
+                    <ImageButton
+                        android:id="@+id/menuBtn7"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        app:layout_constraintCircle="@id/cameraBtn"
+                        app:layout_constraintCircleRadius="130dp"
+                        app:layout_constraintCircleAngle="240"
+                        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
+                        app:layout_constraintTop_toTopOf="@id/cameraBtn"
+                        android:background="@drawable/menu7"/>
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="목재"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@+id/menuBtn7"
+                        app:layout_constraintEnd_toEndOf="@+id/menuBtn7"
+                        app:layout_constraintStart_toStartOf="@+id/menuBtn7"
+                        android:textColor="@color/black"/>
+
+                    <ImageButton
+                        android:id="@+id/menuBtn8"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        app:layout_constraintCircle="@id/cameraBtn"
+                        app:layout_constraintCircleRadius="130dp"
+                        app:layout_constraintCircleAngle="280"
+                        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
+                        app:layout_constraintTop_toTopOf="@id/cameraBtn"
+                        android:background="@drawable/menu8"/>
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="음식물"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@+id/menuBtn8"
+                        app:layout_constraintEnd_toEndOf="@+id/menuBtn8"
+                        app:layout_constraintStart_toStartOf="@+id/menuBtn8"
+                        android:textColor="@color/black"/>
+
+                    <ImageButton
+                        android:id="@+id/menuBtn9"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        app:layout_constraintCircle="@id/cameraBtn"
+                        app:layout_constraintCircleRadius="130dp"
+                        app:layout_constraintCircleAngle="320"
+                        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
+                        app:layout_constraintTop_toTopOf="@id/cameraBtn"
+                        android:background="@drawable/menu9"/>
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="기타"
+                        android:textStyle="normal"
+                        app:layout_constraintTop_toBottomOf="@+id/menuBtn9"
+                        app:layout_constraintEnd_toEndOf="@+id/menuBtn9"
+                        app:layout_constraintStart_toStartOf="@+id/menuBtn9"
+                        android:textColor="@color/black"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/homeconstraint2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="20dp"
+                    app:layout_constraintTop_toBottomOf="@+id/homeconstraint1"
+                    android:background="@drawable/rectangle_all_corner_radius">
+
+                    <TextView
+                        android:id="@+id/searchtext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="재활용 방법 검색"
+                        android:textSize="18sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
+                        android:src="@drawable/ic_baseline_search_24"
+                        app:layout_constraintBottom_toBottomOf="@+id/searchtext"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/searchtext" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
