--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,22 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 style="@style/Widget.MaterialComponents.Toolbar.Primary"
-                app:title="알려줄게"
-                app:titleMarginStart="120dp"
-                app:titleTextColor="@color/black"
-                android:background="#DDEED7"/>
+                android:background="#DDEED7">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="알려줄게"
+                    android:textColor="@color/black"
+                    android:layout_gravity="center"
+                    android:textSize="20dp"
+                    />
+
+            </androidx.appcompat.widget.Toolbar>
 
             <FrameLayout
                 android:id="@+id/frame_layout"
