--- a/app/src/main/res/layout/fragment_tab3.xml
+++ b/app/src/main/res/layout/fragment_tab3.xml
@@ -44,7 +44,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="20dp"
                         android:layout_marginBottom="20dp"
-                        android:background="@drawable/second"
+                        android:background="@drawable/glass"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -88,6 +88,7 @@
                         android:layout_marginBottom="20dp"
                         android:paddingLeft="40dp"
                         android:paddingRight="20dp"
+                        android:paddingBottom="20dp"
                         android:text="@string/Glass"
                         app:layout_constraintTop_toBottomOf="@+id/title1"
                         app:layout_constraintStart_toStartOf="parent"
@@ -131,6 +132,7 @@
                         android:layout_marginBottom="20dp"
                         android:paddingLeft="40dp"
                         android:paddingRight="20dp"
+                        android:paddingBottom="20dp"
                         android:text="@string/Glass2"
                         app:layout_constraintTop_toBottomOf="@+id/title2"
                         app:layout_constraintStart_toStartOf="parent"
