--- a/app/src/main/res/layout/fragment_tab6.xml
+++ b/app/src/main/res/layout/fragment_tab6.xml
@@ -43,7 +43,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_marginEnd="20dp"
                         android:layout_marginBottom="20dp"
-                        android:background="@drawable/second"
+                        android:background="@drawable/box"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -87,6 +87,7 @@
                         android:layout_marginBottom="20dp"
                         android:paddingLeft="40dp"
                         android:paddingRight="20dp"
+                        android:paddingBottom="20dp"
                         android:text="@string/Paper"
                         app:layout_constraintTop_toBottomOf="@+id/title1"
                         app:layout_constraintStart_toStartOf="parent"
@@ -130,6 +131,7 @@
                         android:layout_marginBottom="20dp"
                         android:paddingLeft="40dp"
                         android:paddingRight="20dp"
+                        android:paddingBottom="20dp"
                         android:text="@string/Paper2"
                         app:layout_constraintTop_toBottomOf="@+id/title2"
                         app:layout_constraintStart_toStartOf="parent"
