--- a/app/src/main/res/layout/activity_main_mypage_setting3.xml
+++ b/app/src/main/res/layout/activity_main_mypage_setting3.xml
@@ -47,7 +47,7 @@
             android:id="@+id/TVName1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="알려줄게 서비스 점검 일정 안내드려요.(12월 21일 수요일 18:00~ )"
+            android:text="경북대 학우들을 사로잡은 분리배출 알리미, 지금 만나보세요!"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/black"
@@ -77,7 +77,7 @@
             android:id="@+id/TVName2"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="알려줄게 이용 약관 개정 예정 안내"
+            android:text="에어팟 맥스 받는 방법"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/black"
@@ -107,7 +107,7 @@
             android:id="@+id/TVName3"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="피싱/스미싱 사기에 주의하세요"
+            android:text="소식만 공유해도 제로페이 상품권을 드려요. 지금 참여하세요!"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/black"
@@ -137,7 +137,7 @@
             android:id="@+id/TVName4"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="알려줄게 '모바일앱프로그래밍1' 대상"
+            android:text="분리배출 고수를 만난 이야기 전해요"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/black"
