--- a/app/src/main/res/layout/activity_main_mypage_setting6.xml
+++ b/app/src/main/res/layout/activity_main_mypage_setting6.xml
@@ -41,119 +41,17 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/setting2contitle"
-        android:background="@drawable/bottomline">
-        <TextView
-            android:id="@+id/TVName1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="알려줄게 서비스 점검 일정 안내드려요.(12월 21일 수요일 18:00~ )"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/setting2contitle">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/right"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-        <TextView
-            android:id="@+id/TVContent1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:paddingTop="8dp"
-            android:text="2022.12.21"
-            android:textSize="12sp"
-            app:layout_constraintTop_toBottomOf="@+id/TVName1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/setting2con2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/setting2con1"
-        android:background="@drawable/bottomline">
-        <TextView
-            android:id="@+id/TVName2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="알려줄게 이용 약관 개정 예정 안내"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-        <TextView
-            android:id="@+id/TVContent2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:paddingTop="8dp"
-            android:text="2022.12.12"
-            android:textSize="12sp"
-            app:layout_constraintTop_toBottomOf="@+id/TVName2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/setting2con3"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/setting2con2"
-        android:background="@drawable/bottomline">
-        <TextView
-            android:id="@+id/TVName3"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="피싱/스미싱 사기에 주의하세요"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-        <TextView
-            android:id="@+id/TVContent3"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:paddingTop="8dp"
-            android:text="2022.10.14"
-            android:textSize="12sp"
-            app:layout_constraintTop_toBottomOf="@+id/TVName3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/setting2con4"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/setting2con3"
-        android:background="@drawable/bottomline">
-        <TextView
-            android:id="@+id/TVName4"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:text="알려줄게 '모바일앱프로그래밍1' 대상"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-        <TextView
-            android:id="@+id/TVContent4"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:paddingTop="8dp"
-            android:text="2022.05.26"
-            android:textSize="12sp"
-            app:layout_constraintTop_toBottomOf="@+id/TVName4"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
